# freedom

./: .cproject  .project  CMakeLists.txt  README.md
UrlMonitor/: CMakeLists.txt  MonitorMgr.cpp  MonitorMgr.h  Task.h  TaskHandler.cpp  TaskHandler.h  UrlMonitor.cpp  UrlMonitor.h
curlcpp/: .cproject  .project  CMakeLists.txt  README.md
curlcpp/include/: curl_pair.h
curlcpp/src/: CMakeLists.txt  HTTPGet.cpp  HTTPGet.h
doc/: BandwidthEstimator.dia  HLS-Player.dia  HTTP-adaptive-algorithm.dia  PlaylistParser.dia  SegmentReader.dia  new-mw.dia  new-mw.xmi  system_components.dia
doc/HLS-algorithm/: HLS-algorithm.xmi
doc/filecompare/: filecompare.docbook  filecompare.xmi
doc/playlistManager/: playlistManager.docbook  playlistManager.xmi
doc/playlistParser/: playlistParser.docbook  playlistParser.xmi
fileCompare/: AddedLine.cpp  AddedLine.h  CMakeLists.txt  CompareFile.cpp  CompareFile.h  CompareResultInterface.h  DeletedLine.cpp  DeletedLine.h  ModifiedLine.cpp  ModifiedLine.h  fc_common.h
hlsPlaylist/: CMakeLists.txt  IFramePlaylist.cpp  IFramePlaylist.h  MasterPlaylist.cpp  MasterPlaylist.h  MediaPlaylist.cpp  MediaPlaylist.h  PlaylistInterface.h  VariantsInfo.cpp  VariantsInfo.h  playlist_common.h
hlsPlaylist/m3u8/: Name.h  Playlist.h  Property.h  Section.h  Tag.h
httpGet/: CMakeLists.txt  HTTPGet.cpp  HTTPGet.h
include/: common.h
playlistFactory/: CMakeLists.txt  MasterPlaylist.cpp  MasterPlaylist.h  MediaPlaylist.cpp  MediaPlaylist.h  PlaylistFactory.cpp  PlaylistFactory.h  PlaylistInterface.h  VariantsInfo.cpp  pp_common.h
playlistFactory/m3u8/: Playlist.h  Section.h  Tag.h
playlistManager/: CMakeLists.txt  PlaylistManager.cpp  PlaylistManager.h  RenditionGroups.cpp  RenditionGroups.h  VariantPlaylist.cpp  VariantPlaylist.h
taskScheduler/: CMakeLists.txt  MonitorMgr.cpp  MonitorMgr.h  Task.cpp  Task.h  TaskHandler.cpp  TaskHandler.h  UrlMonitor.cpp  UrlMonitor.h  monitor_common.h
test/UrlMonitor/: CMakeLists.txt  unittest.cpp
test/curlcpp/: CMakeLists.txt  CurlCppTest.cpp  CurlCppTest.h  unittest.cpp
test/file-compare/: CMakeLists.txt  unittest.cpp
test/httpGetTool/: CMakeLists.txt  testmain.cpp
test/playlistMgr/: CMakeLists.txt  unittest.cpp
test/playlistParser/: CMakeLists.txt  unittest.cpp
test/taskScheduler/: CMakeLists.txt  unittest.cpp
vector/: 02.m3u8  03.m3u8  04.m3u8  05.m3u8  cmp.m3u8  cmp_2400ABR.m3u8  cmp_2400ABR_I-Frame.m3u8  fc-test-media.m3u8  iframe.m3u8  index.m3u8  master.m3u8  media.m3u8  media1.m3u8  media2.m3u8  mos.m3u8  mos_0700ABR.m3u8  mos_0700ABR_I-Frame.m3u8  sample_file1  sample_file2  stb.m3u8  stb_2500ABR.m3u8  stb_2500ABR_I-Frame.m3u8  stb_4200ABR.m3u8  stb_4200ABR_I-Frame.m3u8  stb_6200ABR.m3u8  stb_6200ABR_I-Frame.m3u8
